tests/valid/core/result_ok.facet
fn main() -> affine core::result::Result<affine isize, affine bool> {
  core::result::Result<affine isize, affine bool>::Ok(1)
}
