tests/invalid/function/explicit_generic_call_arity.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  (id<affine isize, affine bool> 1)
}
